# vision_based_grasping_benchmarking

./: Dockerfile  README.md  benchmark_grasping.sh  setup.sh  setup2.sh
benchmarking_vision_based_grasping/: requirements.txt
benchmarking_vision_based_grasping/benchmarking_grasp/: package.xml  setup.py
benchmarking_vision_based_grasping/benchmarking_grasp/config/: configuration.yaml
benchmarking_vision_based_grasping/benchmarking_grasp/logs/: log_04:46PM on September 10, 2024.csv  log_04:52PM on September 10, 2024.csv  log_05:01PM on September 10, 2024.csv  log_06:22PM on September 30, 2024.csv  log_06:35PM on September 30, 2024.csv  (+6 more)
benchmarking_vision_based_grasping/benchmarking_msgs/: package.xml
benchmarking_vision_based_grasping/pick_and_place/: CMakeLists.txt
grasp_synthesis/: requirements.txt
grasp_synthesis/ggcnn/: CMakeLists.txt
grasp_synthesis/mask_based_algo/: package.xml  setup.py
grasp_synthesis/ros_deep_grasp/: CMakeLists.txt
grasp_synthesis/ros_deep_grasp/lib/layer_utils/: anchor_target_layer.py
grasp_synthesis/ros_deep_grasp/lib/nets/: vgg16.py
grasp_synthesis/ros_deep_grasp/lib/nms/: gpu_nms.cpp
grasp_synthesis/ros_deep_grasp/scripts/: grasp_service.py
grasp_synthesis/top_surface_algo/: CMakeLists.txt  package.xml
grasping_benchmarking_suite/: benchmark_grasping.sh  setup.sh
grasping_benchmarking_suite/benchmarking_vision_based_grasping/: README.md
grasping_benchmarking_suite/grasp_synthesis/: README.md  requirements.txt
grasping_benchmarking_suite/panda_simulation/: README.md  requirements.txt
panda_simulation/: requirements.txt
panda_simulation/moveit_adapter/: package.xml
panda_simulation/panda_simulation/: package.xml
(+106 files in other folders)
